--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,22 @@
       "email": "code@peterhul.me"
     }
   ],
+  "repositories": [
+    {
+        "type":"vcs",
+        "url":"git://github.com/P87/phmvcfcore.git"
+    }
+  ],
   "require": {
-    "doctrine/orm": "2.4.*"
+    "doctrine/orm": "2.4.*",
+    "P87/phmvcfcore": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "4.0.*"
   },
   "autoload": {
     "psr-4": {
-      "P87\\PHMVCF\\": "src/"
+      "P87\\PHMVCF\\": ""
     }
   }
 }
